# trident

./: CMakeLists.txt  README.md
hash/: blake.c  composite.c  sha.c  shat.c  wp.c
include/: cipher.h  config.h  hash_interface.h  trident.h  types.h
src/: main.c  trident.c
web/: .gitignore  build.sh  index.html  wstr.c
